--- a/src/info.plist
+++ b/src/info.plist
@@ -25,6 +25,39 @@
 				<string>Reveal in Finder</string>
 			</dict>
 		</array>
+		<key>1958F9DC-5B69-4F0C-B4DC-FCBAE0AB1EF8</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>0F77272E-39A5-44AD-BB24-462F199B5590</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+			</dict>
+		</array>
+		<key>36EE8FBB-FCCE-483E-AFCE-AC73906117C3</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>31AB2913-1B83-4976-BE10-2526F543F5E3</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+			</dict>
+		</array>
+		<key>9981F708-6C83-44CD-BC06-B6C10A2B00F6</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>1958F9DC-5B69-4F0C-B4DC-FCBAE0AB1EF8</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+			</dict>
+		</array>
 	</dict>
 	<key>createdby</key>
 	<string>Dean Jackson</string>
@@ -83,6 +116,115 @@
 			<key>version</key>
 			<integer>0</integer>
 		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>escaping</key>
+				<integer>102</integer>
+				<key>script</key>
+				<string>/usr/bin/python sublime.py --action "{query}"</string>
+				<key>type</key>
+				<integer>0</integer>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.action.script</string>
+			<key>uid</key>
+			<string>1958F9DC-5B69-4F0C-B4DC-FCBAE0AB1EF8</string>
+			<key>version</key>
+			<integer>0</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>lastpathcomponent</key>
+				<false/>
+				<key>onlyshowifquerypopulated</key>
+				<false/>
+				<key>output</key>
+				<integer>0</integer>
+				<key>removeextension</key>
+				<false/>
+				<key>sticky</key>
+				<false/>
+				<key>text</key>
+				<string>{query}</string>
+				<key>title</key>
+				<string>Sublime Projects</string>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.output.notification</string>
+			<key>uid</key>
+			<string>0F77272E-39A5-44AD-BB24-462F199B5590</string>
+			<key>version</key>
+			<integer>0</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>argumenttype</key>
+				<integer>2</integer>
+				<key>escaping</key>
+				<integer>127</integer>
+				<key>keyword</key>
+				<string>.stconfig</string>
+				<key>runningsubtext</key>
+				<string>Reading settings…</string>
+				<key>script</key>
+				<string>/usr/bin/python sublime.py --action config</string>
+				<key>subtext</key>
+				<string>View and edit workflow settings</string>
+				<key>title</key>
+				<string>Settings for Sublime Text Projects</string>
+				<key>type</key>
+				<integer>0</integer>
+				<key>withspace</key>
+				<false/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.input.scriptfilter</string>
+			<key>uid</key>
+			<string>9981F708-6C83-44CD-BC06-B6C10A2B00F6</string>
+			<key>version</key>
+			<integer>0</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>argumenttype</key>
+				<integer>2</integer>
+				<key>keyword</key>
+				<string>.sthelp</string>
+				<key>subtext</key>
+				<string>View the help file for this Workflow</string>
+				<key>text</key>
+				<string>Sublime Text Projects Help</string>
+				<key>withspace</key>
+				<false/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.input.keyword</string>
+			<key>uid</key>
+			<string>36EE8FBB-FCCE-483E-AFCE-AC73906117C3</string>
+			<key>version</key>
+			<integer>0</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>escaping</key>
+				<integer>127</integer>
+				<key>script</key>
+				<string>open ./Help.html</string>
+				<key>type</key>
+				<integer>0</integer>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.action.script</string>
+			<key>uid</key>
+			<string>31AB2913-1B83-4976-BE10-2526F543F5E3</string>
+			<key>version</key>
+			<integer>0</integer>
+		</dict>
 	</array>
 	<key>readme</key>
 	<string></string>
@@ -93,10 +235,35 @@
 			<key>ypos</key>
 			<real>10</real>
 		</dict>
+		<key>0F77272E-39A5-44AD-BB24-462F199B5590</key>
+		<dict>
+			<key>ypos</key>
+			<real>250</real>
+		</dict>
+		<key>1958F9DC-5B69-4F0C-B4DC-FCBAE0AB1EF8</key>
+		<dict>
+			<key>ypos</key>
+			<real>250</real>
+		</dict>
 		<key>1F8CC3FB-B3D4-4FCB-B929-EB7E6E186DCD</key>
 		<dict>
 			<key>ypos</key>
 			<real>10</real>
+		</dict>
+		<key>31AB2913-1B83-4976-BE10-2526F543F5E3</key>
+		<dict>
+			<key>ypos</key>
+			<real>370</real>
+		</dict>
+		<key>36EE8FBB-FCCE-483E-AFCE-AC73906117C3</key>
+		<dict>
+			<key>ypos</key>
+			<real>370</real>
+		</dict>
+		<key>9981F708-6C83-44CD-BC06-B6C10A2B00F6</key>
+		<dict>
+			<key>ypos</key>
+			<real>250</real>
 		</dict>
 		<key>E934D964-B0B8-4A32-8DF3-4692A8F26E97</key>
 		<dict>
