--- a/modd.conf
+++ b/modd.conf
@@ -10,14 +10,14 @@ icons/icons.txt {
 
 **/*_test.go
 !vendor/** {
-	prep: go test -v @dirmods
+	prep: go test @dirmods
 }
 
 modd.conf
 **/*.go
 !**/*_test.go
 !vendor/** {
-	prep: go test -v @dirmods && \
+	prep: go test @dirmods && \
 		./bin/build && \
 		./alfsubl search "omegat"
 }
