--- a/modd.conf
+++ b/modd.conf
@@ -1,23 +1,20 @@
 
-bin/build
-*.html {
-	prep: ./bin/build
+magefile.go
+magefile_*.go {
+    prep: "
+        # update mage
+        mage -l
+    "
 }
 
-icons/icons.txt {
-	prep: ./bin/icons
-}
-
-**/*_test.go
-!vendor/** {
+**/*_test.go {
 	prep: go test @dirmods
 }
 
 modd.conf
 **/*.go
+!mage*.go
 !**/*_test.go
 !vendor/** {
-	prep: go test @dirmods && \
-		./bin/build && \
-		./alfsubl search "omegat"
+	prep: go test @dirmods && mage -v run
 }
