--- a/info.plist
+++ b/info.plist
@@ -192,7 +192,18 @@
 			</dict>
 		</array>
 		<key>D545A35F-4FA1-469E-A8AB-A167D29E8D50</key>
-		<array/>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>6F4C4F63-0697-43E5-B54D-317C51DFE8D5</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
 		<key>DA2EB775-5859-482A-8BF0-499164DCDA0B</key>
 		<array>
 			<dict>
@@ -217,6 +228,53 @@
 	<string>Sublime Text Projects</string>
 	<key>objects</key>
 	<array>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>alfredfiltersresults</key>
+				<false/>
+				<key>alfredfiltersresultsmatchmode</key>
+				<integer>0</integer>
+				<key>argumenttrimmode</key>
+				<integer>0</integer>
+				<key>argumenttype</key>
+				<integer>1</integer>
+				<key>escaping</key>
+				<integer>68</integer>
+				<key>keyword</key>
+				<string>.st</string>
+				<key>queuedelaycustom</key>
+				<integer>1</integer>
+				<key>queuedelayimmediatelyinitially</key>
+				<false/>
+				<key>queuedelaymode</key>
+				<integer>0</integer>
+				<key>queuemode</key>
+				<integer>1</integer>
+				<key>runningsubtext</key>
+				<string>Finding projects…</string>
+				<key>script</key>
+				<string>./alfsubl -- "$1"</string>
+				<key>scriptargtype</key>
+				<integer>1</integer>
+				<key>scriptfile</key>
+				<string></string>
+				<key>subtext</key>
+				<string>Search and Open Sublime Text Projects</string>
+				<key>title</key>
+				<string>Sublime Text Projects</string>
+				<key>type</key>
+				<integer>0</integer>
+				<key>withspace</key>
+				<true/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.input.scriptfilter</string>
+			<key>uid</key>
+			<string>0D6DB001-6C1A-4973-BD3C-0CD4706096CB</string>
+			<key>version</key>
+			<integer>2</integer>
+		</dict>
 		<dict>
 			<key>config</key>
 			<dict>
@@ -250,53 +308,6 @@
 			<string>alfred.workflow.action.script</string>
 			<key>uid</key>
 			<string>506077C9-6BF8-401D-B34D-ACAEAA975F30</string>
-			<key>version</key>
-			<integer>2</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
-				<key>alfredfiltersresults</key>
-				<false/>
-				<key>alfredfiltersresultsmatchmode</key>
-				<integer>0</integer>
-				<key>argumenttrimmode</key>
-				<integer>0</integer>
-				<key>argumenttype</key>
-				<integer>1</integer>
-				<key>escaping</key>
-				<integer>68</integer>
-				<key>keyword</key>
-				<string>.st</string>
-				<key>queuedelaycustom</key>
-				<integer>1</integer>
-				<key>queuedelayimmediatelyinitially</key>
-				<false/>
-				<key>queuedelaymode</key>
-				<integer>0</integer>
-				<key>queuemode</key>
-				<integer>1</integer>
-				<key>runningsubtext</key>
-				<string>Finding projects…</string>
-				<key>script</key>
-				<string>./alfsubl search "$1"</string>
-				<key>scriptargtype</key>
-				<integer>1</integer>
-				<key>scriptfile</key>
-				<string></string>
-				<key>subtext</key>
-				<string>Search and Open Sublime Text Projects</string>
-				<key>title</key>
-				<string>Sublime Text Projects</string>
-				<key>type</key>
-				<integer>0</integer>
-				<key>withspace</key>
-				<true/>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.input.scriptfilter</string>
-			<key>uid</key>
-			<string>0D6DB001-6C1A-4973-BD3C-0CD4706096CB</string>
 			<key>version</key>
 			<integer>2</integer>
 		</dict>
@@ -384,7 +395,7 @@
 				<key>runningsubtext</key>
 				<string>Reading settings…</string>
 				<key>script</key>
-				<string>./alfsubl config "$1"</string>
+				<string>./alfsubl -conf -- "$1"</string>
 				<key>scriptargtype</key>
 				<integer>1</integer>
 				<key>scriptfile</key>
@@ -413,7 +424,7 @@
 				<key>escaping</key>
 				<integer>102</integer>
 				<key>script</key>
-				<string>./alfsubl $action "$1"</string>
+				<string>./alfsubl $action -- "$1"</string>
 				<key>scriptargtype</key>
 				<integer>1</integer>
 				<key>scriptfile</key>
@@ -465,25 +476,6 @@
 		<dict>
 			<key>config</key>
 			<dict>
-				<key>inputstring</key>
-				<string>{var:action}</string>
-				<key>matchcasesensitive</key>
-				<true/>
-				<key>matchmode</key>
-				<integer>1</integer>
-				<key>matchstring</key>
-				<string>rescan</string>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.utility.filter</string>
-			<key>uid</key>
-			<string>2DBA4231-BA57-4BB8-9E1D-DD1F29FA2A8A</string>
-			<key>version</key>
-			<integer>1</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
 				<key>argument</key>
 				<string>{var:notification}</string>
 				<key>variables</key>
@@ -507,12 +499,33 @@
 		<dict>
 			<key>config</key>
 			<dict>
+				<key>inputstring</key>
+				<string>{var:action}</string>
+				<key>matchcasesensitive</key>
+				<true/>
+				<key>matchmode</key>
+				<integer>1</integer>
+				<key>matchstring</key>
+				<string>rescan</string>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.utility.filter</string>
+			<key>uid</key>
+			<string>2DBA4231-BA57-4BB8-9E1D-DD1F29FA2A8A</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
 				<key>concurrently</key>
 				<false/>
 				<key>escaping</key>
 				<integer>102</integer>
 				<key>script</key>
-				<string>./alfsubl rescan --force</string>
+				<string>./alfsubl -rescan -force
+
+echo -n "Scan complete"</string>
 				<key>scriptargtype</key>
 				<integer>1</integer>
 				<key>scriptfile</key>
@@ -577,6 +590,8 @@ The workflow scans your system for `.sublime-project` files and allows you to op
 It primarily uses `mdfind` and `locate` (if enabled) to search your system. There is an optional `find`-based scanner to "fill the gaps".
 
 You can disable a specific scanner by setting its INTERVAL_* setting to 0.
+
+Set VSCODE to 1 (or true) to find VSCode projects instead of Sublime ones.
 
 To add additional directories to scan, use `.stconfig &gt; Edit Config File`.</string>
 	<key>uidata</key>
@@ -715,7 +730,7 @@ To add additional directories to scan, use `.stconfig &gt; Edit Config File`.</s
 		<key>INTERVAL_MDFIND</key>
 		<string>10m</string>
 		<key>VSCODE</key>
-		<string>1</string>
+		<string>false</string>
 	</dict>
 	<key>version</key>
 	<string>3.1.1</string>
