--- a/modd.conf
+++ b/modd.conf
@@ -12,9 +12,11 @@ magefile_*.go {
 }
 
 modd.conf
+README.*
+*.png
+icons/*.png
 **/*.go
 !mage*.go
-!**/*_test.go
-!vendor/** {
-	prep: go test @dirmods && mage -v run
+!**/*_test.go {
+	prep: go test . && mage -v run
 }
