Add inline commands

--- a/modd.conf
+++ b/modd.conf
@@ -1,14 +1,14 @@
 
 magefile.go
 magefile_*.go {
-    prep: "
+    prep +onchange: "
         # update mage
         mage -l
     "
 }
 
 **/*_test.go {
-	prep: go test @dirmods
+	prep +onchange: go test @dirmods
 }
 
 modd.conf
@@ -18,5 +18,5 @@ icons/*.png
 **/*.go
 !mage*.go
 !**/*_test.go {
-	prep: go test . && mage -v run
+	prep +onchange: go test . && mage -v run
 }
